# Workplace-Safety-Monitoring-System

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  test_system.py
.github/workflows/: ci.yml
configs/: config.yaml
demo/: app.py
scripts/: train.py
src/: __init__.py
src/data/: __init__.py  generator.py
src/eval/: __init__.py  metrics.py
src/utils/: __init__.py  logging_config.py
tests/: test_safety_monitoring.py
